# copium

./: .clang-format  .envrc  .gitattributes  .gitignore  .gitmodules  Cargo.toml  MANIFEST.in  README.md  README_RUST_IMPLEMENTATION.md  RUST_BUILD_GUIDE.md  RUST_IMPLEMENTATION_STATUS.md  RUST_REWRITE_STATUS.md  RUST_STATUS_REALISTIC.md  build.rs  pyproject.toml  showcase.ipynb  taskfile.yaml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: benchmarks-and-assets.yaml  build.yaml  cd-build.yaml  cd-codspeed.yaml  cd-pyperformance-benchmarks.yaml  cd-sdist.yaml  cd-test.yaml  cd-update-charts.yaml  cd-verify-charts.yaml  cd.yaml  charts.yaml  ci-lint.yaml  ci-memory-tests.yaml  ci-test.yaml  ci-typecheck.yaml  ci.yaml  codspeed.yaml  commit-assets.yaml  docs.yaml  lint.yaml  (+7 more)
ccopium/: README.md  pyproject.toml
ccopium/src/: _ccopium.pth  _deepcopy.c  _deepcopy_legacy.c  _dict_iter.c  _extra.c  _fallback.c  _init.c  _memo_legacy.c  _patching.c  _reduce_helpers.c  _type_checks.c  copium.c  copium___about__.c  copium_extra.c  copium_patch.c
ccopium/tools/build_system/: backend.py
orcopy_scaffolding/: Cargo.toml  build.rs  pyproject.toml
orcopy_scaffolding/src/: about.rs  compat.rs  config.rs  copy.rs  critical_section.rs  deepcopy.rs  dict_iter.rs  extra.rs  fallback.rs  ffi_ext.rs  lib.rs  memo.rs  patch.rs  pymemo.rs  recursion.rs  reduce.rs  state.rs  types.rs
orcopy_scaffolding/src/copium/: __init__.pyi
src/: _abc_registration.c  _common.h  _copy.c  _copy_api.c  _copying.c  _deepcopy.c  _deepcopy_legacy.c  _dict_iter.c  _extra.c  _extra_api.c  _fallback.c  _init.c  _memo.c  _memo.h  _memo_legacy.c  _patch_api.c  _patching.c  _pinning.c  _recursion_guard.c  _reduce_helpers.c  _state.c  _type_checks.c  about.rs  cache.rs  compat.rs  config.rs  copium.c  copium___about__.c  copium__experimental.c  copium_common.h  copium_extra.c  copium_patch.c  copy.c  copy.rs  critical_section.rs  deepcopy.rs  dict_iter.rs  extra.rs  fallback.rs  ffi.rs  (+14 more)
tests/: MEMORY_TESTS.md  __init__.py  conftest.py  test_config.py  test_copium.py  test_copy.py  test_copyc.py  test_environ.py  test_interface.py  test_memo_retention.py  test_memory.py  test_memory_leaks.py  test_patch.py  test_performance.py  test_reduce_errors_causes.py  test_signatures.py
tools/: __init__.py  aggregate_benchmarks.py  benchmark_chart.py  bisect_codspeed_walltime.py  generate_chart.py  generate_compile_commands.py  run_benchmark.py
(+67 files in other folders)
