[package]
name = "copium"
version = "0.1.0"
edition = "2021"

[lib]
name = "copium"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 2
