[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8.0", "wheel"]
build-backend = "tools.build_system.backend"
backend-path = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"copium" = ["../_ccopium.pth"]

[tool.cibuildwheel.windows]
environment = { CL = "/experimental:c11atomics" }

[project]
name = "ccopium"
dynamic = ["version"]
description = "Fast drop-in replacement for copy.deepcopy()"
readme = "README.md"
authors = [{ name = "Arseny Boykov (Bobronium)", email = "hi@bobronium.me" }]
requires-python = ">=3.10"
license = "MIT"
dependencies = []
